# granada

./: CMakeLists.txt
.github/workflows/: cmake.yml
inc/: emailservice.hpp  http_parser.h  webservice.h
mongodbc/: CMakeLists.txt
mongodbc/inc/: mongodbc.h
mongodbc/src/: mongodbc.cc
src/: emailservice.cc  emailservice_fsm.cc  http_parser.cc  webservice.cc  webservice_main.cc
test/: CMakeLists.txt  emailservice_test.cc  emailservice_test.hpp
